# action-network-petition-adder

./: .pre-commit-config.yaml  README.md  data.json  pyproject.toml
.github/workflows/: coverage.yml  dependency-review.yml  python-checks.yml  security_scorecard.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_main_py.html
src/: main.py
tests/: petition_form.html  test_browser.py  test_csv.py  test_form_fill.py  test_inputs.py
tests/test_resources/: example.csv  petition_form_affirmative_opt_in.html
